--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,43 +1,43 @@
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
 
-  html {
-    font-size: 62.5%;
-    box-sizing: border-box;
-  }
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
 
-  body {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    color: var(--color-body);
-    line-height: 1.9;
-    background-color: var(--warm-grey-050);
-  }
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  color: var(--color-body);
+  line-height: 1.9;
+  background-color: var(--warm-grey-050);
+}
 
-  h1 {
-    font-size: 5.5rem;
-    line-height: 1.35;
-    margin-bottom: 2rem;
-  }
+h1 {
+  font-size: 5.5rem;
+  line-height: 1.35;
+  margin-bottom: 2rem;
+}
 
-  h4 {
-    font-size: 2.4rem;
-    font-weight: 500;
-  }
+h4 {
+  font-size: 2.4rem;
+  font-weight: 500;
+}
 
-  p {
-    color: #666;
-  }
+p {
+  color: #666;
+}
 
-  /* GENERAL ELEMENTS */
-  .container {
-    width: var(--md);
+/* GENERAL ELEMENTS */
+.container {
+  width: 100%;
     margin: 0 auto;
 
-    @include media-min($_md) {
+  @include media-min($_md) {
       width: calc($_md - 100px);
     }
 
@@ -45,17 +45,17 @@
       width: calc($_lg - 100px);
     }
 
-    @include media-min($_lg) {
+        @include media-min($_2xl) {
       width: calc($_2xl - 200px);
     }
-  }
+        }
 
-  .section {
-    padding: 15rem;
-    border-top: 1px solid #ddd;
-    transition: transform 1s, opacity 1s;
+.section {
+  padding: 15rem;
+  border-top: 1px solid #ddd;
+  transition: transform 1s, opacity 1s;
 
-    &--hidden {
+  &--hidden {
       opacity: 0;
       transform: translateY(8rem);
     }
@@ -78,36 +78,32 @@
       line-height: 1.3;
       font-weight: 500;
     }
-  }
+        }
 
+/* This is BAD for accessibility! Don't do in the real world! */
+button:focus {
+  outline: none;
+}
 
+img {
+  transition: filter 0.5s;
+}
 
+.lazy-img {
+  filter: blur(20px);
+}
 
-  /* This is BAD for accessibility! Don't do in the real world! */
-  button:focus {
-    outline: none;
-  }
+/* HEADER */
+.header {
+  padding: 0 3rem;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  img {
-    transition: filter 0.5s;
-  }
-
-  .lazy-img {
-    filter: blur(20px);
-  }
-
-
-
-  /* HEADER */
-  .header {
-    padding: 0 3rem;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    &__title {
+  &__title {
       flex: 1;
+    @include media-min($_md) {
       display: grid;
       grid-template-columns: 3fr 2fr;
       row-gap: 3rem;
@@ -116,109 +112,107 @@
       align-items: center;
       justify-items: start;
     }
+        }
 
     &__img {
-      width: 100%;
+    display: none;
+    
+      @include media-min($_md) {
+        display: block;
       grid-column: 2 / 3;
       grid-row: 1 / span 4;
     }
-  }
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: contain;
+                }
+                }
+}
 
-  .highlight {
-    &-primary {
-      color: var(--color-primary);
-    }
+.highlight {
+  &-primary {
+    color: var(--color-primary);
+  }
 
     &-secondary {
       color: var(--color-primary);
     }
-  }
+        }
 
-  /* SIGNUP */
-  .section--sign-up {
-    background-color: var(--warm-grey-900);
-    border-top: none;
-    border-bottom: 1px solid var(--warm-grey-900);
-    text-align: center;
-    padding: 10rem 3rem;
-  }
+/* SIGNUP */
+// .section--sign-up {
+//   background-color: var(--warm-grey-900);
+//   border-top: none;
+//   border-bottom: 1px solid var(--warm-grey-900);
+//   text-align: center;
+//   padding: 10rem 3rem;
+//   &.section__header {
+//       color: #fff;
+//       text-align: center;
+//     }
+//                               &.section__title {
+//                                 margin-bottom: 6rem;
+//     font-size: 1.9rem;
 
-  .section--sign-up .section__header {
-    color: #fff;
-    text-align: center;
-  }
+//               &.btn {
+  //                 font-size: 1.9rem;
+  //                 padding: 2rem 5rem;
+  // }
 
-  .section--sign-up .section__title {
-    margin-bottom: 6rem;
-  }
+/* FOOTER */
+.footer {
+  padding: 10rem 3rem;
+  background-color: var(--warm-grey-900);
 
-  .section--sign-up .btn {
-    font-size: 1.9rem;
-    padding: 2rem 5rem;
-  }
-
-  /* FOOTER */
-  .footer {
-    padding: 10rem 3rem;
-    background-color: var(--warm-grey-900);
-  }
-
-  .footer__nav {
+  &__nav {
     list-style: none;
     display: flex;
     justify-content: center;
     margin-bottom: 5rem;
   }
 
-  .footer__item {
+        &__item {
     margin-right: 4rem;
   }
 
-  .footer__link {
+        &__link {
     font-size: 1.6rem;
     color: var(--warm-grey-050);
     text-decoration: none;
   }
 
-  .footer__logo {
+        &__logo {
     height: 5rem;
     display: block;
     margin: 0 auto;
     margin-bottom: 5rem;
   }
 
-  .footer__copyright {
+        &__copyright {
     font-size: 1.4rem;
     color: #aaa;
     text-align: center;
   }
 
-  .footer__copyright .footer__link {
+        &__copyright .footer__link {
     font-size: 1.4rem;
   }
+}
 
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
 
-
-  .hidden {
-    visibility: hidden;
-    opacity: 0;
-  }
-
-  /* COOKIE MESSAGE */
-  .cookie-message {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-    background-color: white;
-    color: #bbb;
-    font-size: 1.5rem;
-    font-weight: 400;
-  }
-
-  /* BACK TO TOP */
-  #back-to-top {
-    position: fixed;
-    top: 80%;
-    right: 1.5rem;
-  }
+/* COOKIE MESSAGE */
+.cookie-message {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  background-color: white;
+  color: #bbb;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
