--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,5 +1,5 @@
 .btn {
-    display: inline-block;
+  display: inline-block;
     background-color: var(--cyan-200);
     font-size: 1.6rem;
     font-family: inherit;
@@ -10,12 +10,12 @@
     cursor: pointer;
     transition: all 0.3s;
 
-    &:hover {
-        background-color: var(--cyan-300);
+  &:hover {
+      background-color: var(--cyan-300);
     }
 
     &--text {
-        display: inline-block;
+      display: inline-block;
         background: none;
         font-size: 1.7rem;
         font-family: inherit;
@@ -33,26 +33,29 @@
 }
 
 #back-to-top {
-    padding: 1rem;
+  padding: 1rem;
     width: 15ch;
     height: 15ch;
-    display: flex;
+  transform: scale(0.5);
+  display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: var(--yellow-400);
-    opacity: .5;
-    border-radius: 50%;
+  border-radius: 50%;
     transition: all 0.2s;
     cursor: pointer;
 
-    &:hover {
+  position: fixed;
+    bottom: 1.5rem;
+    right: 1.5rem;
+  &:hover {
 
-        opacity: 1;
+    transform: scale(1);
     }
 
     span:first-child {
-        font-size: 2.5rem;
+      font-size: 2.5rem;
         line-height: 2ch;
     }
 }
