--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -1,40 +1,52 @@
 /* FEATURES */
 .features {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 4rem;
-    margin: 0 12rem;
 
-    &__img {
-        width: 100%;
-    }
+&__card {
+    background-color: #fff;
+    flex: 1;
+  }
 
-    &__feature {
-        align-self: center;
-        justify-self: center;
-        width: 70%;
-        font-size: 1.5rem;
-    }
+  &__figure {
+    width: 100%;
+  }
 
-    &__icon {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: var(--color-primary-opacity);
-        height: 5.5rem;
-        width: 5.5rem;
-        border-radius: 50%;
-        margin-bottom: 2rem;
-    }
+&__img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+&__feature {
+padding: 4rem 5rem;
+  font-size: 1.5rem;
+}
 
-    &__icon svg {
-        height: 2.5rem;
-        width: 2.5rem;
-        fill: var(--color-primary);
-    }
+&__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-primary-opacity);
+height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
 
-    &__header {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-    }
+&__icon svg {
+height: 2rem;
+  width: 2rem;
+  fill: var(--color-primary);
+}
+
+&__header {
+display: grid;
+  grid-template-columns: 5rem auto;
+  align-items: center;
+font-size: 2rem;
+  margin-bottom: 1rem;
+}
+@include media-min($_md) {
+  display: flex;
+  justify-content: space-between;
+  gap: 4rem;
+  margin: 0 12rem;
+}
 }
