dev: Responsive footer.

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -140,26 +140,6 @@ img {
     }
         }
 
-/* SIGNUP */
-// .section--sign-up {
-//   background-color: var(--warm-grey-900);
-//   border-top: none;
-//   border-bottom: 1px solid var(--warm-grey-900);
-//   text-align: center;
-//   padding: 10rem 3rem;
-//   &.section__header {
-//       color: #fff;
-//       text-align: center;
-//     }
-//                               &.section__title {
-//                                 margin-bottom: 6rem;
-//     font-size: 1.9rem;
-
-//               &.btn {
-  //                 font-size: 1.9rem;
-  //                 padding: 2rem 5rem;
-  // }
-
 /* FOOTER */
 .footer {
   padding: 10rem 3rem;
@@ -167,13 +147,13 @@ img {
 
   &__nav {
     list-style: none;
-    display: flex;
-    justify-content: center;
     margin-bottom: 5rem;
-  }
-
-        &__item {
-    margin-right: 4rem;
+    text-align: center;
+    
+      @include media-min($_md) {
+        display: flex;
+        justify-content: space-between;
+}
   }
 
         &__link {
@@ -203,16 +183,4 @@ img {
 .hidden {
   visibility: hidden;
   opacity: 0;
-}
-
-/* COOKIE MESSAGE */
-.cookie-message {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-  background-color: white;
-  color: #bbb;
-  font-size: 1.5rem;
-  font-weight: 400;
 }
