--- a/src/css/style.css
+++ b/src/css/style.css
@@ -217,7 +217,6 @@ img {
   color: var(--color-primary);
 }
 
-/* SIGNUP */
 /* FOOTER */
 .footer {
   padding: 10rem 3rem;
@@ -225,12 +224,14 @@ img {
 }
 .footer__nav {
   list-style: none;
-  display: flex;
-  justify-content: center;
   margin-bottom: 5rem;
+  text-align: center;
 }
-.footer__item {
-  margin-right: 4rem;
+@media screen and (min-width: 768px) {
+  .footer__nav {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .footer__link {
   font-size: 1.6rem;
@@ -255,18 +256,6 @@ img {
 .hidden {
   visibility: hidden;
   opacity: 0;
-}
-
-/* COOKIE MESSAGE */
-.cookie-message {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-  background-color: white;
-  color: #bbb;
-  font-size: 1.5rem;
-  font-weight: 400;
 }
 
 .nav {
@@ -515,11 +504,26 @@ img {
   right: 1.5rem;
 }
 #back-to-top:hover {
-  transform: scale(1);
+  transform: scale(0.8);
 }
 #back-to-top span:first-child {
-  font-size: 2.5rem;
+  font-size: 5rem;
   line-height: 2ch;
+}
+#back-to-top span:last-child {
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  #back-to-top span:first-child {
+    font-size: 2.5rem;
+    line-height: 2ch;
+  }
+  #back-to-top span:last-child {
+    display: inline-block;
+  }
+  #back-to-top:hover {
+    transform: scale(1);
+  }
 }
 
 /* OPERATIONS */
@@ -856,6 +860,17 @@ img {
   /* background-color: #fff; */
   background-color: #888;
   opacity: 1;
+}
+
+.cookie-message {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  background-color: white;
+  color: #bbb;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 
 /*# sourceMappingURL=style.css.map */
