--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,61 +1,78 @@
 .btn {
+display: inline-block;
+  background-color: var(--cyan-200);
+  font-size: 1.6rem;
+  font-family: inherit;
+  font-weight: 500;
+  border: none;
+  padding: 1.25rem 4.5rem;
+  border-radius: var(--border-radius-l);
+  cursor: pointer;
+  transition: all 0.3s;
+
+&:hover {
+    background-color: var(--cyan-300);
+  }
+
+&--text {
   display: inline-block;
-    background-color: var(--cyan-200);
-    font-size: 1.6rem;
-    font-family: inherit;
-    font-weight: 500;
-    border: none;
-    padding: 1.25rem 4.5rem;
-    border-radius: var(--border-radius-l);
-    cursor: pointer;
-    transition: all 0.3s;
-
-  &:hover {
-      background-color: var(--cyan-300);
-    }
-
-    &--text {
-      display: inline-block;
-        background: none;
-        font-size: 1.7rem;
-        font-family: inherit;
-        font-weight: 500;
-        color: var(--cyan-300);
-        border: none;
-        border-bottom: 1px solid currentColor;
-        padding-top: 6rem;
-        ;
-        padding-bottom: 2px;
-        cursor: pointer;
-        transition: all 0.3s;
-    }
+  background: none;
+  font-size: 1.7rem;
+  font-family: inherit;
+  font-weight: 500;
+  color: var(--cyan-300);
+  border: none;
+  border-bottom: 1px solid currentColor;
+  padding-top: 6rem;
+  ;
+  padding-bottom: 2px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
 
 }
 
 #back-to-top {
   padding: 1rem;
-    width: 15ch;
+  width: 15ch;
     height: 15ch;
   transform: scale(0.5);
   display: flex;
-    flex-direction: column;
+  flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: var(--yellow-400);
   border-radius: 50%;
-    transition: all 0.2s;
+  transition: all 0.2s;
     cursor: pointer;
+position: fixed;
+  bottom: 1.5rem;
+  right: 1.5rem;
 
-  position: fixed;
-    bottom: 1.5rem;
-    right: 1.5rem;
   &:hover {
+transform: scale(0.8);
+}
 
-    transform: scale(1);
-    }
+span:first-child {
+  font-size: 5rem;
+  line-height: 2ch;
+}
 
-    span:first-child {
-      font-size: 2.5rem;
-        line-height: 2ch;
-    }
+span:last-child {
+  display: none;
+}
+
+@include media-min($_lg) {
+span:first-child {
+    font-size: 2.5rem;
+    line-height: 2ch;
+  }
+span:last-child {
+  display: inline-block;
+}
+
+&:hover {
+  transform: scale(1);
+}
+}
 }
