--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -18,7 +18,11 @@
 
   &__feature {
     padding: 4rem 5rem;
+    margin-bottom: 5rem;
     font-size: 1.5rem;
+    @include media-min($_lg) {
+        margin-bottom: 0;
+      }
   }
 
   &__icon {
@@ -45,7 +49,7 @@
     margin-bottom: 1rem;
   }
 
-  @include media-min($_md) {
+                @include media-min($_lg) {
     display: flex;
     justify-content: space-between;
     gap: 4rem;
