--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -18,7 +18,7 @@ body {
 }
 
 h1 {
-  font-size: 5.5rem;
+  font-size: clamp(4rem, 5.5rem, 6rem);
   line-height: 1.35;
   margin-bottom: 2rem;
 }
@@ -26,6 +26,11 @@ h1 {
 h4 {
   font-size: 2.4rem;
   font-weight: 500;
+  max-width: 25ch;
+  @include media-min($_lg){
+    max-width:none;
+
+  }
 }
 
 p {
@@ -34,54 +39,55 @@ p {
 
 /* GENERAL ELEMENTS */
 .container {
-  width: 100%;
-    margin: 0 auto;
+  width: 95%;
+  margin: 0 auto;
 
   @include media-min($_md) {
-      width: calc($_md - 100px);
-    }
+    width: calc($_md - 100px);
+  }
 
-    @include media-min($_lg) {
-      width: calc($_lg - 100px);
-    }
+  @include media-min($_lg) {
+    width: calc($_lg - 100px);
+  }
 
-        @include media-min($_2xl) {
-      width: calc($_2xl - 200px);
-    }
-        }
+  @include media-min($_2xl) {
+    width: calc($_2xl - 200px);
+  }
+}
 
 .section {
   padding: 15rem 5rem;
   border-top: 1px solid #ddd;
   transition: transform 1s, opacity 1s;
+
   @include media-min($_lg) {
-      padding: 15rem;
-    }
+    padding: 15rem;
+  }
 
   &--hidden {
-      opacity: 0;
-      transform: translateY(8rem);
-    }
+    opacity: 0;
+    transform: translateY(8rem);
+  }
 
-    &__title {
-      max-width: 80rem;
-      margin: 0 auto 8rem auto;
-    }
+  &__title {
+    max-width: 80rem;
+    margin: 0 auto 8rem auto;
+  }
 
-    &__description {
-      font-size: 1.8rem;
-      font-weight: 600;
-      text-transform: uppercase;
-      color: var(--color-primary);
-      margin-bottom: 1rem;
-    }
+  &__description {
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--color-primary);
+    margin-bottom: 1rem;
+  }
 
-    &__header {
-      font-size: 4rem;
-      line-height: 1.3;
-      font-weight: 500;
-    }
-        }
+  &__header {
+    font-size: 4rem;
+    line-height: 1.3;
+    font-weight: 500;
+  }
+}
 
 /* This is BAD for accessibility! Don't do in the real world! */
 button:focus {
@@ -98,14 +104,19 @@ img {
 
 /* HEADER */
 .header {
-  padding: 0 3rem;
+  --nav-height: 9rem;
+  --tiny-nav:4rem;
+  //padding: 0 3rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   &__title {
-      flex: 1;
+    flex: 1;
+    padding-top: calc(var(--tiny-nav) * 2);
+    display:flex;
+    flex-direction: column-reverse;
     @include media-min($_md) {
       display: grid;
       grid-template-columns: 3fr 2fr;
@@ -115,22 +126,31 @@ img {
       align-items: center;
       justify-items: start;
     }
-        }
+    @include media-min($_lg) {
+      padding-top: 0;
+    }
+  }
 
-    &__img {
-    display: none;
-    
-      @include media-min($_md) {
-        display: block;
+  &__img {
+    margin:2rem 0;
+    max-height: calc(var(--tiny-nav) * 4);
+
+    @include media-min($_md) {
+      margin:0;
+      max-height: auto;
       grid-column: 2 / 3;
       grid-row: 1 / span 4;
     }
-                img {
-                  width: 100%;
-                  height: 100%;
-                  object-fit: contain;
-                }
-                }
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: left top;
+      }
+      
+    
+  }
 }
 
 .highlight {
@@ -138,10 +158,10 @@ img {
     color: var(--color-primary);
   }
 
-    &-secondary {
-      color: var(--color-primary);
-    }
-        }
+  &-secondary {
+    color: var(--color-primary);
+  }
+}
 
 /* FOOTER */
 .footer {
@@ -152,33 +172,33 @@ img {
     list-style: none;
     margin-bottom: 5rem;
     text-align: center;
-    
-      @include media-min($_md) {
-        display: flex;
-        justify-content: space-between;
-}
+
+    @include media-min($_md) {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 
-        &__link {
+  &__link {
     font-size: 1.6rem;
     color: var(--warm-grey-050);
     text-decoration: none;
   }
 
-        &__logo {
+  &__logo {
     height: 5rem;
     display: block;
     margin: 0 auto;
     margin-bottom: 5rem;
   }
 
-        &__copyright {
+  &__copyright {
     font-size: 1.4rem;
     color: #aaa;
     text-align: center;
   }
 
-        &__copyright .footer__link {
+  &__copyright .footer__link {
     font-size: 1.4rem;
   }
 }
