--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -1,92 +1,135 @@
 .nav {
-  --nav-height: 9rem;
   display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: var(--nav-height);
-    width: 100%;
-    padding: 0;
-    z-index: 100;
-@include media-min($_lg) {
-  
+  justify-content: space-between;
+  align-items: center;
+  height: var(--nav-height);
+  width: 100%;
+  padding:  0 1rem;
+  position:relative;
+  z-index: 100;
+
+  @include media-min($_lg) {
     padding: 0 2rem;
-    }
-    
-    @include media-min($_xl) {
-      padding: 0 6rem;
-    }
-&.sticky {
-  position: fixed;
-  background-color: rgba(255, 255, 255, 0.95);
-}
+  }
 
-&__logo {
-  height: 4.5rem;
-  transition: all 0.3s;
-}
+  @include media-min($_xl) {
+    padding: 0 6rem;
+  }
 
-&__links {
-  display: none;
-    list-style: none;
-  
-    @include media-min($_lg) {
+  &.sticky {
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.95);
+    .nav__links{
+      background-color: rgba(255, 255, 255, 0.95);
+    }
+  }
+
+  &__logo {
+    height: 4.5rem;
+    transition: all 0.3s;
+  }
+  &__tiny-screen{
     display: flex;
-      align-items: center;
-    padding: 0 2rem;
+    gap: 1.5rem;
+    a.btn--show-modal{display:none;}
+    @include media-min($_md){
+      a.btn--show-modal{display:inline-block;}
     }
+    @include media-min($_lg){
+      display:none;
+    }
+  }
+  &__links {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    column-gap: 0.5rem;
+    position: absolute;
+    top: var(--nav-height);
+    left: 0;
+    z-index: 1000;
+    width: 100vw;
+    height: var(--tiny-nav);
+    background-color: var(--warm-grey-050);
+    border-width: 1px 0;
+    border-color: var(--warm-grey-500);
+    border-style: solid;
+    @include media-min($_sm){
+      column-gap: 1rem;
+    }
+    @include media-min($_lg) {
+      height: var(--tiny-nav);
+      position:unset;
+      border:none;
+      justify-content:end;
+    }
+  }
+
+  &__item {
+    margin: 0;
+    display: inline-block;
+    text-align: center;
+
+    @include media-min($_lg) {
+      margin-left: 3rem;
     }
 
-&__item {
-  margin-left: 3rem;
-  
     @include media-min($_xl) {
-    margin-left: 4rem;
+      margin-left: 4rem;
     }
-}
+    // BUTTONS
+    &:nth-child(n + 4) {
+      display: none;
+      @include media-min($_lg) {
+        display: inline-block;
+      }
+    }
+  }
 
-&__link:link,
-&__link:visited {
-  font-size: 1.7rem;
-  font-weight: 400;
-  color: inherit;
-  text-decoration: none;
-  display: block;
-  transition: all 0.3s;
-}
+  &__link:link,
+  &__link:visited {
+    font-size: 1.7rem;
+    font-weight: 400;
+    color: inherit;
+    text-decoration: none;
+    display: block;
+    transition: all 0.3s;
+  }
 
-&__link--btn:link,
-&__link--btn:visited {
-  padding: 0.8rem 1.5rem;
+  &__link--btn:link,
+  &__link--btn:visited {
+    padding: 0.8rem 1.5rem;
     border-radius: 1rem;
     background-color: var(--color-primary);
     color: #222;
     @include media-min($_lg) {
-        border-radius: 3rem;
-        padding: 0.8rem 2rem;
-      }
-    
-      @include media-min($_xl) {
-        padding: 0.8rem 2.5rem;
-      }
-}
+      border-radius: 3rem;
+      padding: 0.8rem 2rem;
+    }
 
-&__link--btn:hover,
-&__link--btn:active {
-  color: inherit;
-  background-color: var(--color-primary-darker);
-  color: #333;
-}
-&__link--btn.btn--bank {
-
-  background-color: var(--yellow-300);
-
-  @include media-min($_xl) {
-    display: inline-grid;
-    grid-template-columns: repeat(2, 1fr) auto;
-    column-gap: 0.5rem;
-    align-content: center;
-    align-items: center;
+    @include media-min($_xl) {
+      padding: 0.8rem 2.5rem;
+    }
   }
+
+  &__link--btn:hover,
+  &__link--btn:active {
+    color: inherit;
+    background-color: var(--color-primary-darker);
+    color: #333;
+  }
+  &__link--btn.btn--bank {
+    background-color: var(--yellow-300);
+
+    @include media-min($_xl) {
+      display: inline-grid;
+      grid-template-columns: repeat(2, 1fr) auto;
+      column-gap: 0.5rem;
+      align-content: center;
+      align-items: center;
+    }
+  
 
   &:hover {
     background-color: var(--yellow-400);
@@ -98,125 +141,16 @@
     @include media-min($_xl) {
       grid-column: 1 / -2;
     }
-
   }
 
   svg {
-    width: 2ch;
-    height: 2ch;
-    transform: translateY(-2px);
     display: none;
-
     @include media-min($_xl) {
       display: block;
+      width: 2ch;
+      height: 2ch;
+      transform: translateY(-2px);
     }
   }
 }
-}
-
-// BURGER
-.burger {
-  --init: 5;
-  --lineh: calc(var(--init) * 1px);
-  --wh: calc(var(--init) * 5px);
-  --translateY: calc((var(--wh) / 2) - (var(--lineh) / 2));
-
-
-
-  &__input {
-    visibility: hidden;
-    position: absolute;
-
-    @include media-min($_lg) {
-      display: none;
-    }
-  }
-
-  &__label {
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: calc(var(--wh) + 4px);
-    height: var(--wh);
-
-    @include media-min($_lg) {
-      display: none;
-    }
-  }
-
-  &__line {
-    width: 100%;
-    height: var(--lineh);
-    background-color: var(--warm-grey-800);
-    border-radius: 2px;
-    transition: all .2s;
-    transform-origin: center;
-  }
-
-  &__input:checked~.burger__label>div:nth-child(1) {
-    transform: translatey(var(--translateY)) rotate(-45deg);
-
-  }
-
-  &__input:checked~.burger__label>div:nth-child(2) {
-    opacity: 0;
-  }
-
-  &__input:checked~.burger__label>div:nth-child(3) {
-    transform: translatey(calc(-1 * var(--translateY))) rotate(45deg);
-  }
-
-  // NAV LINKS
-  &__input:checked~.nav__links {
-    display: grid;
-    column-gap: 1rem;
-    grid-template-columns: repeat(12, minmax(0, 1fr));
-    grid-template-rows: repeat(4, 1fr);
-    justify-content: center;
-    position: absolute;
-    top: var(--nav-height);
-    left: 0;
-    z-index: 1000;
-    width: 100vw;
-    text-align: center;
-    background-color: var(--warm-grey-050);
-    border-width: 1px 0;
-    border-color: var(--warm-grey-500);
-    border-style: solid;
-
-    .nav__item {
-      margin: 0;
-    }
-
-    .nav__item:nth-child(1) {
-      grid-column: 4 / 6;
-      grid-row: 2 / -2;
-
-    }
-
-    .nav__item:nth-child(2) {
-      grid-column: 6 /8;
-      grid-row: 2 / -2;
-
-    }
-
-    .nav__item:nth-child(3) {
-      grid-column: 8 /10;
-      grid-row: 2 / -2;
-
-    }
-
-    // BUTTONS
-    .nav__item:nth-child(4) {
-      grid-row: 3 / -3;
-      grid-column: 4/7;
-    }
-
-    .nav__item:nth-child(5) {
-      grid-row: 3 / -3;
-      grid-column: 7/10;
-    }
-
-  }
 }
