--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -4,8 +4,6 @@
     height: 50rem;
     margin: 0 auto;
     position: relative;
-
-    /* IN THE END */
     overflow: hidden;
 }
 
@@ -13,37 +11,35 @@
     position: absolute;
     top: 0;
     width: 100%;
-    height: 50rem;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
-    /* THIS creates the animation! */
     transition: transform 1s;
 }
 
 .slide>img {
-    /* Only for images that have different size than slide */
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
 .slider__btn {
-    position: absolute;
-    top: 50%;
-    z-index: 10;
-
-    border: none;
-    background: rgba(255, 255, 255, 0.7);
-    font-family: inherit;
-    color: #333;
-    border-radius: 50%;
-    height: 5.5rem;
-    width: 5.5rem;
-    font-size: 3.25rem;
+    display: none;
     cursor: pointer;
+    @include media-min($_md){
+        display: block;
+        position: absolute;
+        top: 50%;
+        z-index: 10;
+        border: none;
+        background: rgba(255, 255, 255, 0.7);
+        font-family: inherit;
+        color: #333;
+        border-radius: 50%;
+        height: 5.5rem;
+        width: 5.5rem;
+        font-size: 3.25rem;
+    }
 }
 
 .slider__btn--left {
@@ -58,7 +54,7 @@
 
 .dots {
     position: absolute;
-    bottom: 5%;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -74,9 +70,6 @@
     margin-right: 1.75rem;
     cursor: pointer;
     transition: all 0.5s;
-
-    /* Only necessary when overlying images */
-    /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
 }
 
 .dots__dot:last-child {
@@ -84,7 +77,6 @@
 }
 
 .dots__dot--active {
-    /* background-color: #fff; */
     background-color: #888;
     opacity: 1;
 }
