--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -56,7 +56,7 @@ p {
 }
 
 .section {
-  padding: 15rem 5rem;
+  padding: 18rem 5rem 15rem 5rem;
   border-top: 1px solid #ddd;
   transition: transform 1s, opacity 1s;
 
