--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,7 @@
 @use "units" as u;
 @import "breakpoints";
 @import "base";
+@import "tosort";
 @import "components/navigation";
 @import "components/buttons";
 @import "components/operations";
