--- a/src/css/bank.css
+++ b/src/css/bank.css
@@ -87,14 +87,42 @@ body {
 }
 
 h1 {
+  font-weight: 500;
+}
+
+h2 {
+  font-weight: 500;
+}
+
+h3 {
+  font-weight: 500;
+}
+
+h4 {
+  font-weight: 500;
+}
+
+h5 {
+  font-weight: 500;
+}
+
+h6 {
+  font-weight: 500;
+}
+
+h1 {
   font-size: 5.5rem;
   line-height: 1.35;
   margin-bottom: 2rem;
 }
 
+h3 {
+  font-size: 4rem;
+  line-height: 1.3;
+}
+
 h4 {
   font-size: 2.4rem;
-  font-weight: 500;
   max-width: 25ch;
 }
 @media screen and (min-width: 1024px) {
@@ -103,8 +131,15 @@ h4 {
   }
 }
 
+h5 {
+  font-size: 2.25rem;
+  line-height: 3.375rem;
+}
+
 p {
-  color: #666;
+  font-size: 1.7rem;
+  line-height: 3.4rem;
+  color: var(--color-body);
 }
 
 /* GENERAL ELEMENTS */
@@ -174,11 +209,11 @@ nav {
 
 .login__input:focus {
   outline: none;
-  border: 1px solid #ccc;
+  border: 1px solid var(--warm-grey-200);
 }
 
 .login__input::placeholder {
-  color: #bbb;
+  border: 1px solid #fff;
 }
 
 .login__btn {
@@ -195,7 +230,7 @@ nav {
 .btn--sort:hover,
 .btn--sort:focus {
   outline: none;
-  color: #777;
+  color: var(--warm-grey-400);
 }
 
 /* MAIN */
@@ -207,8 +242,8 @@ nav {
   grid-template-columns: 4fr 3fr;
   grid-template-rows: auto repeat(3, 15rem) auto;
   gap: 2rem;
-  /* NOTE This creates the fade in/out animation */
-  opacity: 0;
+  /* Fade in/out animation */
+  opacity: 1;
   transition: all 1s;
 }
 
@@ -228,7 +263,7 @@ nav {
 
 .balance__date {
   font-size: 1.4rem;
-  color: #888;
+  color: var(--warm-grey-500);
 }
 
 .balance__value {
@@ -248,7 +283,7 @@ nav {
   padding: 2.25rem 4rem;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid var(--warm-grey-025);
 }
 
 .movements__type {
@@ -265,15 +300,15 @@ nav {
   font-size: 1.1rem;
   text-transform: uppercase;
   font-weight: 500;
-  color: #666;
+  color: var(--color-body);
 }
 
 .movements__type--deposit {
-  background-image: linear-gradient(to top left, #39b385, #9be15d);
+  background-image: linear-gradient(to top left, var(--teal-400), var(--teal-300));
 }
 
 .movements__type--withdrawal {
-  background-image: linear-gradient(to top left, #e52a5a, #ff585f);
+  background-image: linear-gradient(to top left, var(--red-400), var(--red-300));
 }
 
 .movements__value {
@@ -324,26 +359,26 @@ nav {
 .operation {
   border-radius: 1rem;
   padding: 3rem 4rem;
-  color: #333;
+  color: var(--warm-grey-800);
 }
 
 .operation--transfer {
-  background-image: linear-gradient(to top left, #ffb003, #ffcb03);
+  background-image: linear-gradient(to top left, var(--yellow-400), var(--yellow-200));
 }
 
 .operation--loan {
-  background-image: linear-gradient(to top left, #39b385, #9be15d);
+  background-image: linear-gradient(to top left, var(--teal-400), var(--teal-200));
 }
 
 .operation--close {
-  background-image: linear-gradient(to top left, #e52a5a, #ff585f);
+  background-image: linear-gradient(to top left, var(--red-300), var(--red-200));
 }
 
 h2 {
   margin-bottom: 1.5rem;
   font-size: 1.7rem;
   font-weight: 600;
-  color: #333;
+  color: var(--warm-grey-800);
 }
 
 .form {
@@ -371,7 +406,7 @@ h2 {
   font-family: inherit;
   font-size: 1.5rem;
   text-align: center;
-  color: #333;
+  color: var(--warm-grey-800);
   padding: 0.3rem 1rem;
   border-radius: 0.7rem;
   transition: all 0.3s;
