--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -16,25 +16,40 @@ body {
   line-height: 1.9;
   background-color: var(--warm-grey-050);
 }
+@for $i from 1 through 6 {
+  h#{$i}{
+    font-weight: 500;
+  }
+}
 
 h1 {
   font-size: clamp(4rem, 5.5rem, 6rem);
   line-height: 1.35;
   margin-bottom: 2rem;
 }
-
+h3{
+  font-size: 4rem;
+  line-height: 1.3;
+    
+}
 h4 {
   font-size: 2.4rem;
-  font-weight: 500;
   max-width: 25ch;
   @include media-min($_lg){
     max-width:none;
 
   }
 }
+h5{
+  font-size: 2.25rem;
+  line-height: calc(2.25rem * 1.5);
+}
+
 
 p {
-  color: #666;
+  font-size:1.7rem;
+  line-height: calc(1.7rem * 2);
+  color: var(--color-body);
 }
 
 /* GENERAL ELEMENTS */
