--- a/src/sass/_tosort.scss
+++ b/src/sass/_tosort.scss
@@ -1,7 +1,7 @@
 
 .section {
   padding: 18rem 5rem 15rem 5rem;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid var(--warm-grey-200);
   transition: transform 1s, opacity 1s;
 
   @include media-min($_lg) {
@@ -25,17 +25,6 @@
     color: var(--color-primary);
     margin-bottom: 1rem;
   }
-
-  &__header {
-    font-size: 4rem;
-    line-height: 1.3;
-    font-weight: 500;
-  }
-}
-
-/* This is BAD for accessibility! Don't do in the real world! */
-button:focus {
-  outline: none;
 }
 
 img {
@@ -50,7 +39,6 @@ img {
 .header {
   --nav-height: 9rem;
   --tiny-nav:4rem;
-  //padding: 0 3rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -92,19 +80,11 @@ img {
         object-fit: contain;
         object-position: left top;
       }
-      
-    
   }
 }
 
 .highlight {
-  &-primary {
-    color: var(--color-primary);
-  }
-
-  &-secondary {
-    color: var(--color-primary);
-  }
+  color: var(--color-primary);
 }
 
 /* FOOTER */
@@ -145,4 +125,10 @@ img {
   &__copyright .footer__link {
     font-size: 1.4rem;
   }
+}
+
+.flex-column{  
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
