--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -20,9 +20,10 @@
     padding: 4rem 5rem;
     margin-bottom: 5rem;
     font-size: 1.5rem;
+
     @include media-min($_lg) {
-        margin-bottom: 0;
-      }
+      margin-bottom: 0;
+    }
   }
 
   &__icon {
@@ -33,6 +34,10 @@
     height: 4rem;
     width: 4rem;
     border-radius: 50%;
+    margin: 0 auto 2rem auto;
+    @include media-min($_2xl) {
+      margin:0;
+    }
   }
 
   &__icon svg {
@@ -42,17 +47,23 @@
   }
 
   &__header {
-    display: grid;
-    grid-template-columns: 5rem auto;
-    align-items: center;
     font-size: 2rem;
     margin-bottom: 1rem;
+    @include media-min($_2xl) {
+      display: grid;
+      grid-template-columns: 5rem auto;
+      align-items: center;
+    }
   }
 
-                @include media-min($_lg) {
+  @include media-min($_lg) {
     display: flex;
     justify-content: space-between;
     gap: 4rem;
+
+  }
+
+  @include media-min($_xl) {
     margin: 0 12rem;
   }
 }
